// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`bucket is public 1`] = `
"{
  \\"resource\\": {
    \\"azurerm_resource_group\\": {
      \\"root_ResourceGroup_72A9AFB6\\": {
        \\"location\\": \\"East US\\",
        \\"name\\": \\"Default-c82bf964\\"
      }
    },
    \\"azurerm_storage_account\\": {
      \\"root_StorageAccount_3B92EC74\\": {
        \\"account_replication_type\\": \\"LRS\\",
        \\"account_tier\\": \\"Standard\\",
        \\"location\\": \\"\${azurerm_resource_group.root_ResourceGroup_72A9AFB6.location}\\",
        \\"name\\": \\"defaultc82bf964\\",
        \\"resource_group_name\\": \\"\${azurerm_resource_group.root_ResourceGroup_72A9AFB6.name}\\"
      }
    },
    \\"azurerm_storage_container\\": {
      \\"root_mybucket_Bucket_10512A98\\": {
        \\"container_access_type\\": \\"public\\",
        \\"name\\": \\"my-bucket-c8045fcc\\",
        \\"storage_account_name\\": \\"\${azurerm_storage_account.root_StorageAccount_3B92EC74.name}\\"
      }
    }
  }
}"
`;

exports[`bucket is public 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "ResourceGroup": {
                "constructInfo": {
                  "fqn": "@cdktf/provider-azurerm.resourceGroup.ResourceGroup",
                  "version": "5.0.2",
                },
                "id": "ResourceGroup",
                "path": "root/Default/ResourceGroup",
              },
              "StorageAccount": {
                "constructInfo": {
                  "fqn": "@cdktf/provider-azurerm.storageAccount.StorageAccount",
                  "version": "5.0.2",
                },
                "id": "StorageAccount",
                "path": "root/Default/StorageAccount",
              },
              "azure": {
                "constructInfo": {
                  "fqn": "@cdktf/provider-azurerm.provider.AzurermProvider",
                  "version": "5.0.2",
                },
                "id": "azure",
                "path": "root/Default/azure",
              },
              "my_bucket": {
                "attributes": {
                  "wing:resource:connections": [],
                  "wing:resource:stateful": true,
                },
                "children": {
                  "Bucket": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-azurerm.storageContainer.StorageContainer",
                      "version": "5.0.2",
                    },
                    "id": "Bucket",
                    "path": "root/Default/my_bucket/Bucket",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "my_bucket",
                "path": "root/Default/my_bucket",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.1.245",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.15.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`bucket name valid 1`] = `
"{
  \\"resource\\": {
    \\"azurerm_resource_group\\": {
      \\"root_ResourceGroup_72A9AFB6\\": {
        \\"location\\": \\"East US\\",
        \\"name\\": \\"Default-c82bf964\\"
      }
    },
    \\"azurerm_storage_account\\": {
      \\"root_StorageAccount_3B92EC74\\": {
        \\"account_replication_type\\": \\"LRS\\",
        \\"account_tier\\": \\"Standard\\",
        \\"location\\": \\"\${azurerm_resource_group.root_ResourceGroup_72A9AFB6.location}\\",
        \\"name\\": \\"defaultc82bf964\\",
        \\"resource_group_name\\": \\"\${azurerm_resource_group.root_ResourceGroup_72A9AFB6.name}\\"
      }
    },
    \\"azurerm_storage_container\\": {
      \\"root_TheUncannyBucket_DDA021FB\\": {
        \\"container_access_type\\": \\"private\\",
        \\"name\\": \\"the-uncanny-bucket-c8ac4720\\",
        \\"storage_account_name\\": \\"\${azurerm_storage_account.root_StorageAccount_3B92EC74.name}\\"
      }
    }
  }
}"
`;

exports[`bucket name valid 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "ResourceGroup": {
                "constructInfo": {
                  "fqn": "@cdktf/provider-azurerm.resourceGroup.ResourceGroup",
                  "version": "5.0.2",
                },
                "id": "ResourceGroup",
                "path": "root/Default/ResourceGroup",
              },
              "StorageAccount": {
                "constructInfo": {
                  "fqn": "@cdktf/provider-azurerm.storageAccount.StorageAccount",
                  "version": "5.0.2",
                },
                "id": "StorageAccount",
                "path": "root/Default/StorageAccount",
              },
              "The-Uncanny-Bucket": {
                "attributes": {
                  "wing:resource:connections": [],
                  "wing:resource:stateful": true,
                },
                "children": {
                  "Bucket": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-azurerm.storageContainer.StorageContainer",
                      "version": "5.0.2",
                    },
                    "id": "Bucket",
                    "path": "root/Default/The-Uncanny-Bucket/Bucket",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "The-Uncanny-Bucket",
                "path": "root/Default/The-Uncanny-Bucket",
              },
              "azure": {
                "constructInfo": {
                  "fqn": "@cdktf/provider-azurerm.provider.AzurermProvider",
                  "version": "5.0.2",
                },
                "id": "azure",
                "path": "root/Default/azure",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.1.245",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.15.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`bucket with two preflight objects 1`] = `
"{
  \\"resource\\": {
    \\"azurerm_resource_group\\": {
      \\"root_ResourceGroup_72A9AFB6\\": {
        \\"location\\": \\"East US\\",
        \\"name\\": \\"Default-c82bf964\\"
      }
    },
    \\"azurerm_storage_account\\": {
      \\"root_StorageAccount_3B92EC74\\": {
        \\"account_replication_type\\": \\"LRS\\",
        \\"account_tier\\": \\"Standard\\",
        \\"location\\": \\"\${azurerm_resource_group.root_ResourceGroup_72A9AFB6.location}\\",
        \\"name\\": \\"defaultc82bf964\\",
        \\"resource_group_name\\": \\"\${azurerm_resource_group.root_ResourceGroup_72A9AFB6.name}\\"
      }
    },
    \\"azurerm_storage_blob\\": {
      \\"root_mybucket_Blobfile1txt_5100BBF1\\": {
        \\"name\\": \\"file1.txt\\",
        \\"source_content\\": \\"hello world\\",
        \\"storage_account_name\\": \\"\${azurerm_storage_account.root_StorageAccount_3B92EC74.name}\\",
        \\"storage_container_name\\": \\"\${azurerm_storage_container.root_mybucket_Bucket_10512A98.name}\\",
        \\"type\\": \\"Block\\"
      },
      \\"root_mybucket_Blobfile2txt_D2544996\\": {
        \\"name\\": \\"file2.txt\\",
        \\"source_content\\": \\"boom bam\\",
        \\"storage_account_name\\": \\"\${azurerm_storage_account.root_StorageAccount_3B92EC74.name}\\",
        \\"storage_container_name\\": \\"\${azurerm_storage_container.root_mybucket_Bucket_10512A98.name}\\",
        \\"type\\": \\"Block\\"
      }
    },
    \\"azurerm_storage_container\\": {
      \\"root_mybucket_Bucket_10512A98\\": {
        \\"container_access_type\\": \\"public\\",
        \\"name\\": \\"my-bucket-c8045fcc\\",
        \\"storage_account_name\\": \\"\${azurerm_storage_account.root_StorageAccount_3B92EC74.name}\\"
      }
    }
  }
}"
`;

exports[`bucket with two preflight objects 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "ResourceGroup": {
                "constructInfo": {
                  "fqn": "@cdktf/provider-azurerm.resourceGroup.ResourceGroup",
                  "version": "5.0.2",
                },
                "id": "ResourceGroup",
                "path": "root/Default/ResourceGroup",
              },
              "StorageAccount": {
                "constructInfo": {
                  "fqn": "@cdktf/provider-azurerm.storageAccount.StorageAccount",
                  "version": "5.0.2",
                },
                "id": "StorageAccount",
                "path": "root/Default/StorageAccount",
              },
              "azure": {
                "constructInfo": {
                  "fqn": "@cdktf/provider-azurerm.provider.AzurermProvider",
                  "version": "5.0.2",
                },
                "id": "azure",
                "path": "root/Default/azure",
              },
              "my_bucket": {
                "attributes": {
                  "wing:resource:connections": [],
                  "wing:resource:stateful": true,
                },
                "children": {
                  "Blob-file1.txt": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-azurerm.storageBlob.StorageBlob",
                      "version": "5.0.2",
                    },
                    "id": "Blob-file1.txt",
                    "path": "root/Default/my_bucket/Blob-file1.txt",
                  },
                  "Blob-file2.txt": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-azurerm.storageBlob.StorageBlob",
                      "version": "5.0.2",
                    },
                    "id": "Blob-file2.txt",
                    "path": "root/Default/my_bucket/Blob-file2.txt",
                  },
                  "Bucket": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-azurerm.storageContainer.StorageContainer",
                      "version": "5.0.2",
                    },
                    "id": "Bucket",
                    "path": "root/Default/my_bucket/Bucket",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "my_bucket",
                "path": "root/Default/my_bucket",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.1.245",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.15.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`create a bucket 1`] = `
"{
  \\"resource\\": {
    \\"azurerm_resource_group\\": {
      \\"root_ResourceGroup_72A9AFB6\\": {
        \\"location\\": \\"East US\\",
        \\"name\\": \\"Default-c82bf964\\"
      }
    },
    \\"azurerm_storage_account\\": {
      \\"root_StorageAccount_3B92EC74\\": {
        \\"account_replication_type\\": \\"LRS\\",
        \\"account_tier\\": \\"Standard\\",
        \\"location\\": \\"\${azurerm_resource_group.root_ResourceGroup_72A9AFB6.location}\\",
        \\"name\\": \\"defaultc82bf964\\",
        \\"resource_group_name\\": \\"\${azurerm_resource_group.root_ResourceGroup_72A9AFB6.name}\\"
      }
    },
    \\"azurerm_storage_container\\": {
      \\"root_mybucket_Bucket_10512A98\\": {
        \\"container_access_type\\": \\"private\\",
        \\"name\\": \\"my-bucket-c8045fcc\\",
        \\"storage_account_name\\": \\"\${azurerm_storage_account.root_StorageAccount_3B92EC74.name}\\"
      }
    }
  }
}"
`;

exports[`create a bucket 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "ResourceGroup": {
                "constructInfo": {
                  "fqn": "@cdktf/provider-azurerm.resourceGroup.ResourceGroup",
                  "version": "5.0.2",
                },
                "id": "ResourceGroup",
                "path": "root/Default/ResourceGroup",
              },
              "StorageAccount": {
                "constructInfo": {
                  "fqn": "@cdktf/provider-azurerm.storageAccount.StorageAccount",
                  "version": "5.0.2",
                },
                "id": "StorageAccount",
                "path": "root/Default/StorageAccount",
              },
              "azure": {
                "constructInfo": {
                  "fqn": "@cdktf/provider-azurerm.provider.AzurermProvider",
                  "version": "5.0.2",
                },
                "id": "azure",
                "path": "root/Default/azure",
              },
              "my_bucket": {
                "attributes": {
                  "wing:resource:connections": [],
                  "wing:resource:stateful": true,
                },
                "children": {
                  "Bucket": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-azurerm.storageContainer.StorageContainer",
                      "version": "5.0.2",
                    },
                    "id": "Bucket",
                    "path": "root/Default/my_bucket/Bucket",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "my_bucket",
                "path": "root/Default/my_bucket",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.1.245",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.15.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`create multiple buckets 1`] = `
"{
  \\"resource\\": {
    \\"azurerm_resource_group\\": {
      \\"root_ResourceGroup_72A9AFB6\\": {
        \\"location\\": \\"East US\\",
        \\"name\\": \\"Default-c82bf964\\"
      }
    },
    \\"azurerm_storage_account\\": {
      \\"root_StorageAccount_3B92EC74\\": {
        \\"account_replication_type\\": \\"LRS\\",
        \\"account_tier\\": \\"Standard\\",
        \\"location\\": \\"\${azurerm_resource_group.root_ResourceGroup_72A9AFB6.location}\\",
        \\"name\\": \\"defaultc82bf964\\",
        \\"resource_group_name\\": \\"\${azurerm_resource_group.root_ResourceGroup_72A9AFB6.name}\\"
      }
    },
    \\"azurerm_storage_container\\": {
      \\"root_mybucket2_Bucket_C2147F5F\\": {
        \\"container_access_type\\": \\"private\\",
        \\"name\\": \\"my-bucket2-c87f4817\\",
        \\"storage_account_name\\": \\"\${azurerm_storage_account.root_StorageAccount_3B92EC74.name}\\"
      },
      \\"root_mybucket_Bucket_10512A98\\": {
        \\"container_access_type\\": \\"private\\",
        \\"name\\": \\"my-bucket-c8045fcc\\",
        \\"storage_account_name\\": \\"\${azurerm_storage_account.root_StorageAccount_3B92EC74.name}\\"
      }
    }
  }
}"
`;

exports[`create multiple buckets 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "ResourceGroup": {
                "constructInfo": {
                  "fqn": "@cdktf/provider-azurerm.resourceGroup.ResourceGroup",
                  "version": "5.0.2",
                },
                "id": "ResourceGroup",
                "path": "root/Default/ResourceGroup",
              },
              "StorageAccount": {
                "constructInfo": {
                  "fqn": "@cdktf/provider-azurerm.storageAccount.StorageAccount",
                  "version": "5.0.2",
                },
                "id": "StorageAccount",
                "path": "root/Default/StorageAccount",
              },
              "azure": {
                "constructInfo": {
                  "fqn": "@cdktf/provider-azurerm.provider.AzurermProvider",
                  "version": "5.0.2",
                },
                "id": "azure",
                "path": "root/Default/azure",
              },
              "my_bucket": {
                "attributes": {
                  "wing:resource:connections": [],
                  "wing:resource:stateful": true,
                },
                "children": {
                  "Bucket": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-azurerm.storageContainer.StorageContainer",
                      "version": "5.0.2",
                    },
                    "id": "Bucket",
                    "path": "root/Default/my_bucket/Bucket",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "my_bucket",
                "path": "root/Default/my_bucket",
              },
              "my_bucket2": {
                "attributes": {
                  "wing:resource:connections": [],
                  "wing:resource:stateful": true,
                },
                "children": {
                  "Bucket": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-azurerm.storageContainer.StorageContainer",
                      "version": "5.0.2",
                    },
                    "id": "Bucket",
                    "path": "root/Default/my_bucket2/Bucket",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "my_bucket2",
                "path": "root/Default/my_bucket2",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.1.245",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.15.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;
